--- a/VibeNine.csproj
+++ b/VibeNine.csproj
@@ -3,6 +3,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <LangVersion>default</LangVersion>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
@@ -23,5 +24,6 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.2" />
     <PackageReference Include="LiveChartsCore.SkiaSharpView.Avalonia" Version="2.0.0-beta.920" />
     <PackageReference Include="Material.Icons.Avalonia" Version="2.0.1" />
+    <PackageReference Include="ReactiveUI.Fody" Version="19.4.1" />
   </ItemGroup>
 </Project>
