--- a/VibeOne.csproj
+++ b/VibeOne.csproj
@@ -13,7 +13,6 @@
     <AvaloniaResource Include="Assets\**" />
   </ItemGroup>
 
-
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.0.2" />
     <PackageReference Include="Avalonia.Desktop" Version="11.0.2" />
@@ -22,7 +21,10 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.2" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.2" />
+    <PackageReference Include="DialogHost.Avalonia" Version="0.7.6" />
     <PackageReference Include="LiveChartsCore.SkiaSharpView.Avalonia" Version="2.0.0-beta.920" />
+    <PackageReference Include="Material.Avalonia" Version="3.0.0-avalonia11-preview6.18-nightly" />
+    <PackageReference Include="Material.Avalonia.Dialogs" Version="3.0.0-avalonia11-preview6.17-nightly" />
     <PackageReference Include="Material.Icons.Avalonia" Version="2.0.1" />
     <PackageReference Include="ReactiveUI.Fody" Version="19.4.1" />
   </ItemGroup>
