--- a/VibeOne.csproj
+++ b/VibeOne.csproj
@@ -28,4 +28,15 @@
     <PackageReference Include="Material.Icons.Avalonia" Version="2.0.1" />
     <PackageReference Include="ReactiveUI.Fody" Version="19.4.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Views\DetailsTempPanel.axaml.cs">
+      <DependentUpon>DetailsTempPanel.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Views\DetailsTodayPanel.axaml.cs">
+      <DependentUpon>DetailsTodayPanel.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
 </Project>
