--- a/VibeOne.csproj
+++ b/VibeOne.csproj
@@ -10,23 +10,27 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <AvaloniaResource Include="Assets\**" />
+    <AvaloniaResource Include="Assets\**"/>
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.0.2" />
-    <PackageReference Include="Avalonia.Desktop" Version="11.0.2" />
-    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.2" />
-    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.2" />
+    <PackageReference Include="Avalonia" Version="11.0.4"/>
+    <PackageReference Include="Avalonia.Desktop" Version="11.0.4"/>
+    <PackageReference Include="Avalonia.LinuxFramebuffer" Version="11.0.4"/>
+    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.4"/>
+    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.4"/>
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.2" />
-    <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.2" />
-    <PackageReference Include="DialogHost.Avalonia" Version="0.7.6" />
-    <PackageReference Include="LiveChartsCore.SkiaSharpView.Avalonia" Version="2.0.0-beta.920" />
-    <PackageReference Include="Material.Avalonia" Version="3.0.0-avalonia11-preview6.18-nightly" />
-    <PackageReference Include="Material.Avalonia.Dialogs" Version="3.0.0-avalonia11-preview6.17-nightly" />
-    <PackageReference Include="Material.Icons.Avalonia" Version="2.0.1" />
-    <PackageReference Include="ReactiveUI.Fody" Version="19.4.1" />
+    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.4"/>
+    <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.4"/>
+    <PackageReference Include="DialogHost.Avalonia" Version="0.7.6"/>
+    <PackageReference Include="Iot.Device.Bindings" Version="3.0.0"/>
+    <PackageReference Include="LiveChartsCore.SkiaSharpView.Avalonia" Version="2.0.0-beta.920"/>
+    <PackageReference Include="Material.Avalonia" Version="3.0.0-avalonia11-preview6.18-nightly"/>
+    <PackageReference Include="Material.Avalonia.Dialogs" Version="3.0.0-avalonia11-preview6.17-nightly"/>
+    <PackageReference Include="Material.Icons.Avalonia" Version="2.0.1"/>
+    <PackageReference Include="ReactiveUI.Fody" Version="19.4.1"/>
+    <PackageReference Include="System.Device.Gpio" Version="3.0.0"/>
+    <PackageReference Include="Splat.DependencyInjection.SourceGenerator" Version="1.1.93" PrivateAssets="all"/>
   </ItemGroup>
 
   <ItemGroup>
